--- a/cookbook/meal-prep/navbars-basic/css/page5.css
+++ b/cookbook/meal-prep/navbars-basic/css/page5.css
@@ -52,7 +52,7 @@ body {
     position as more of a funnel at the end
     of a flow.
 
-    Once you've perused the sight navigation,
+    Once you've perused the site navigation,
     the last thing you see is something telling
     to sign up, or create an account, or 
     something like that.  It's hard to avoid,
