--- a/cookbook/meal-prep/navbars-basic/css/page0.css
+++ b/cookbook/meal-prep/navbars-basic/css/page0.css
@@ -5,9 +5,9 @@
     designs that could be applied to a navbar,
     as opposed to building multiple navbars.
 
-    This will probably be confusing to some
-    students, but reassure them at the start
-    that the different navbars we'll be 
+    This maybe be a bit confusing to folks
+    following the live demo, but be aware that
+    the different navbars we'll be 
     building are also covered in the Layouts
     section of the Coding Cookbook.
 
@@ -15,12 +15,8 @@
     HTML structure of a div with anchors 
     inside.
 
-    (I think this may contradict something we
-    had in a previous powerpoint, where we
-    said we'd be teaching them to put 
-    navigation links in lists.
-
-    But in the interesting of keeping things
-    simpler, I'm opting to keep lists out
-    of the demo)
+    (There's a big debate about whether it's 
+    better to include navigation items in 
+    lists or not, but in the interest of 
+    simplicity, we're not going to use lists)
 */
