updating abs vs rel demo

--- a/cookbook/meal-prep/absolute-vs-relative-units/css/page1.css
+++ b/cookbook/meal-prep/absolute-vs-relative-units/css/page1.css
@@ -1,6 +1,6 @@
 /*
     First, we'll use absolute units, which
-    students should hopefully be familiar
+    you should hopefully be familiar
     with at this point.
 */
 
@@ -14,7 +14,7 @@
 
 /*
     Stretch and squish the preview panel, and
-    show students how the font size stays the
+    notice how the font size stays the
     same no matter how the screen size changes.
 
     That's a feature of "absolute" units.
