--- a/cookbook/meal-prep/absolute-vs-relative-units/css/page2.css
+++ b/cookbook/meal-prep/absolute-vs-relative-units/css/page2.css
@@ -25,7 +25,7 @@
 
 /*
     Stretch and squish the preview again, and
-    show students how the font size changes 
+    notice how the font size changes 
     along with the preview window.
 
     This can be pretty effective at making
