--- a/cookbook/meal-prep/absolute-vs-relative-units/css/page4.css
+++ b/cookbook/meal-prep/absolute-vs-relative-units/css/page4.css
@@ -24,7 +24,7 @@
 }
 
 /*
-    Again, show students that the image size
+    Again, notice that the image size
     doesn't change when we use absolute units 
     for width (nor does the image resize if
     we haven't given it any width/height).
