box model and combining selectors updates

--- a/cookbook/meal-prep/box-model/css/page4.css
+++ b/cookbook/meal-prep/box-model/css/page4.css
@@ -13,8 +13,8 @@ div {
 }
 
 /*
-    Encourage the students to think of margin
-    as "personal space" between HTML elements.
+    Try to think of margin as "personal space" 
+    between HTML elements.
 
     When we set margin: 24px, we set 24px of
     "personal space" around the elements,
