single column demo update

--- a/cookbook/meal-prep/one-column-layouts/css/page0.css
+++ b/cookbook/meal-prep/one-column-layouts/css/page0.css
@@ -3,13 +3,13 @@
     single column layouts that you could potentially use
     for a web page.
 
-    (I'd bring up though that you are not limited to only 
+    Remember that you are not limited to only 
     use one single layout on a web page; most web pages
     actually combine multiple page layouts that we'll be
-    learning about this week.)
+    learning about this week.
 
     It's important to have your HTML set up properly 
-    (if possible) before writing a single line of CSS
+    before writing a single line of CSS (if possible)
     when it comes to setting up a page layout.
 
     Containers are an important part of any page layout.
