--- a/cookbook/meal-prep/product-showcase-site/css/page0.css
+++ b/cookbook/meal-prep/product-showcase-site/css/page0.css
@@ -10,7 +10,7 @@
     of the product(s) they're trying to 
     showcase.
 
-    We're not trying to invent the wheel,
+    We're not trying to reinvent the wheel,
     so they can "steal" the content they
     need so that they can focus on the 
     layout and design instead.
