metube demo updates

--- a/cookbook/meal-prep/two-column-mixed-layouts/css/page0.css
+++ b/cookbook/meal-prep/two-column-mixed-layouts/css/page0.css
@@ -11,10 +11,10 @@
     sneak peek into our 3rd Layout Week, where we
     cover Navigation.
 
-    Encourage the students to really pay attention for
+    Make sure you really pay attention for
     this one, as it will be a good starting point for
-    their "MeTube" project due later today, which is
-    going to be their own personal take on YouTube.
+    your "MeTube" project due later today, which is
+    going to be your own personal take on YouTube.
 
     We'll start out as always with our HTML layout first,
     using three containers inside of the grid-layout
