--- a/cookbook/meal-prep/two-column-mixed-layouts/css/page7.css
+++ b/cookbook/meal-prep/two-column-mixed-layouts/css/page7.css
@@ -53,8 +53,14 @@ body {
     in there, so we're definitely going to want
     to modify our flexbox.
 
-    (Ask students which Flexbox Container property
-    they think might help)
+    Which Flexbox Container property do you 
+    think might help?
+
+
+
+
+
+
 
     The answer is: flex-wrap!
 
