--- a/cookbook/meal-prep/two-column-mixed-layouts/css/page9.css
+++ b/cookbook/meal-prep/two-column-mixed-layouts/css/page9.css
@@ -164,27 +164,29 @@ body {
     MeTube project; we got it looking pretty close to
     a simplified version of the YouTube site...
 
-    ...but the students aren't supposed to be building
-    YouTube; they're building MeTube, their own custom
+    ...but you aren't supposed to be building
+    YouTube; you're building MeTube, your own custom
     version of YouTube!
 
     So in addition to adding actual content to the page,
-    they should also customize the page to reflect
+    you should also customize the page to reflect
     themselves, not only in its content, but also in 
     its style and appearance.
 
     It doesn't need to be mostly white, the color scheme
-    doesn't need to be red, they can adjust the fonts,
+    doesn't need to be red/grey, the fonts can be adjusted,
     font sizes, paddings, margins, sizes, border radius...
 
-    There's so much to customize! Encourage students to
-    experiment: if what they tried didn't work, change it
-    back, and then try something else.  That's how they'll
+    There's so much to customize! We encourage you to
+    experiment: if what you tried didn't work, change it
+    back, and then try something else.  That's how you'll
     learn.
 
-    If they're very paranoid about breaking something,
-    tell them they can either commit and push (basically
-    creating a "save-point" in their code), or duplicate
-    this demo's project folder, so they have a "clean" 
+    If you're very paranoid about breaking something,
+    you can either commit and push (basically
+    creating a "save-point" in your code), or duplicate
+    this demo's project folder, so you have a "clean" 
     version and another version for experimenting.
+
+    Have fun, and good luck!
 */
