--- a/cookbook/meal-prep/galleries/css/page3.css
+++ b/cookbook/meal-prep/galleries/css/page3.css
@@ -16,7 +16,7 @@ body {
 .basic-grid-gallery {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 24px; /* new */
+    gap: 24px; 
 
     padding: 24px;
     border: 10px solid #333333;
