media query demo v3

--- a/cookbook/meal-prep/media-queries-v3/css/page0.css
+++ b/cookbook/meal-prep/media-queries-v3/css/page0.css
@@ -1,7 +1,7 @@
 /* 
     Today's demo is all about Media Queries.
 
-    Rememeber that Media Queries allow us to 
+    Remember that Media Queries allow us to 
     alter page styles when specific conditions
     are met; most frequently, these conditions
     have to do with the page width.
