--- a/cookbook/meal-prep/media-queries-v3/css/page2.css
+++ b/cookbook/meal-prep/media-queries-v3/css/page2.css
@@ -5,6 +5,10 @@
     Media Queries to make our webpage more
     responsive.
 
+    By the end of this demo, we'll have
+    something resembling a simple portfolio
+    site for a photographer.
+
     Since we just learned how to create 
     navbars, we'll start with a simple
     variation of one of those.
