--- a/cookbook/meal-prep/media-queries-v3/css/page5.css
+++ b/cookbook/meal-prep/media-queries-v3/css/page5.css
@@ -36,6 +36,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 24px;
 }
 
 .image-container,
@@ -49,6 +50,7 @@ body {
 
 .content-container h1 {
     font-size: 48px;
+    color: #ffb700;
 }
 
 /*
