--- a/cookbook/meal-prep/media-queries-v3/css/page6.css
+++ b/cookbook/meal-prep/media-queries-v3/css/page6.css
@@ -36,6 +36,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 24px;
 }
 
 .image-container,
@@ -49,19 +50,72 @@ body {
 
 .content-container h1 {
     font-size: 48px;
+    color: #ffb700;
 }
 
 /*
-    As we shrink our screen preview, once we pop into
-    the tablet breakpoint, the "Hello, I'm Jim" text
-    starts to wrap, which doesn't look as nice.
+    In our previous two examples, the navbar
+    and the Media & Text layout, we primarily
+    used Flexbox to make things more responsive.
 
-    One of the things we frequently have to do on
-    responsive web pages is adjust the font sizes 
-    and spacing between elements as our breakpoints
-    get smaller.
+    In this last example, we're going to use
+    CSS Grid to build a gallery, and show you
+    how we can use CSS Grid to make a site more
+    responsive.
 
-    Let's decrease the font-size on tablet.
+    Before we get into that though, we need to
+    hop back to our HTML once again.  Once 
+    you're done, come back here.
+*/
+
+/*
+    All done? Good!
+
+    Let's start by styling our .featured container.
+    We'll give it a style similar to our navbar,
+    just to mix things up a bit.
+*/
+.featured {
+    background-color: #222222;
+    color: white;
+    padding: 24px 0px;
+}
+
+/*
+    Next, we'll also target that h2 and change its
+    style by increasing its font-size and centering it.
+*/
+.featured h2 {
+    font-size: 36px;
+    text-align: center;
+}
+
+/*
+    We'll also set up our grid images in a similar
+    way to our intro image above, but this time
+    we'll give each image an explicit height, so
+    that things are nice and even in the grid.
+
+    They won't look very good at first, but we're
+    setting them up to look good when they're
+    put into the grid.
+*/
+.grid img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 24px;
+}
+
+/*
+    In the next step, we'll set up our grid with a 
+    more customized layout than the default.
+
+    Before that though, note that because we used the 
+    same "single-column-layout" class in the HTML that 
+    we set up before, we don't need to set up another
+    bunch of layout-related CSS Properties; it already
+    has the same style as the section above it.
 */
 
 @media screen and (max-width: 768px) and (min-width: 481px) {
@@ -73,43 +127,14 @@ body {
         font-size: 32px;
     }
 
-    /*
-        That works for most of the tablet breakpoint,
-        but not all of it as we get smaller.
-
-        Part of the problem is the spacing between the 
-        image and the text; if we decrease that gap,
-        more text should fit without wraping.
-    */
     .intro {
         gap: 24px;
     }
 
-    /*
-        Better still! The only thing that stands out
-        to me now from a design perspective is that
-        the image is starting to unbalance the text 
-        again, so let's shrink its container a bit more.
-    */
     .image-container {
         height: 300px;
     }
 }
-
-/*
-    Looking good! How about mobile
-    (i.e. when the background turns red)?
-
-    ...not so much.
-
-    When things get that narrow, we can only shrink 
-    the font size so much before things start
-    getting unreadable.
-
-    So instead, let's stack the Media & Text content
-    in the exact same way we stacked our navbar!
-*/
-
 
 @media screen and (max-width: 480px) {
     body {
@@ -122,67 +147,17 @@ body {
         flex-direction: column;
         align-items: center;
     }
-
-    /*
-        Again, the .intro already has Flexbox
-        activated from our 'default' code up above,
-        so we only need to write the additional
-        properties we need.
-    */
     .intro {
         flex-direction: column;
-        /*
-            DEMO NOTE: this code is added later.
-        */
-        /* gap: 24px; */
+        gap: 24px;
     }
 
-    /*
-        Not bad! But there are still some things we
-        could improve.
-
-        The spacing between the image and text is
-        rather large, and when we have short bits
-        of content like this on a narrow phone screen,
-        it often looks better centered, rather than
-        left-aligned.
-
-        So let's address those issues! The spacing
-        is partly due to the gap property, so we
-        can go back up to the .intro CSS rule we 
-        just created and add that there.
-
-        Then we can also decrease the margin on the
-        h1 inside the .content-container.
-    */
     .content-container h1 {
         margin: 0px;
         font-size: 32px
     }
 
-    /* 
-        And lastly, we can use a plain ol'
-        text-align property to center the text 
-        content.
-    */
     .content-container {
         text-align: center;
     }
 }
-
-/*
-    Not bad! Now we have a pretty responsive
-    Media & Text layout, that adapts to
-    desktop, tablet, and mobile, just by
-    changing some text, spacing, and Flexbox
-    properties in the media queries.
-
-    There are always things that we can tweak
-    further to make even MORE responsive:
-    for instance, the image is rather tall
-    on mobile; we might want to shrink that
-    down a bit.
-
-    However, in the interest of time, we're going 
-    to continue on with one more responsive example.
-*/
